# SQL_Query_Env_RL

./: README.md
sql_optimizer_env/: README.md  __init__.py  client.py  db.py  docker-compose.yml  models.py  openenv.yaml  pyproject.toml  sample_db_init.sql
sql_optimizer_env/openenv_sql_optimizer_env.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sql_optimizer_env/server/: Dockerfile  __init__.py  app.py  sql_optimizer_env_environment.py
